fix: Nested types in PRIMITIVE_MESSAGE conflicts and Java 11 compatibility.